--- a/CPlus/演算法/演算法.vcxproj
+++ b/CPlus/演算法/演算法.vcxproj
@@ -19,28 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\CPlus\Exam4.35 vector string to charArray.cpp" />
-    <ClCompile Include="..\CPlus\Exam4.41.cpp" />
-    <ClCompile Include="..\CPlus\Exam5.18String轉char Array.cpp" />
-    <ClCompile Include="..\CPlus\Exam6.25.cpp" />
-    <ClCompile Include="..\CPlus\Exam7.14.cpp" />
-    <ClCompile Include="..\演算法\Exam11.1.cpp" />
-    <ClCompile Include="Exam10.1.cpp" />
-    <ClCompile Include="Exam7.34_Overload.cpp" />
-    <ClCompile Include="Exam8.6.cpp" />
-    <ClCompile Include="Exam9.2.1.cpp" />
-    <ClCompile Include="My_Sales_main.cpp" />
-    <ClCompile Include="My_Sales.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="My_Sales.h" />
+    <ClCompile Include="accumulatepp.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{22286A1B-FAF2-44E2-87D7-6E41FDF97626}</ProjectGuid>
+    <ProjectGuid>{79A679B3-7861-46D9-AE55-502062035893}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>習題cpp</RootNamespace>
+    <RootNamespace>演算法</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
-    <ProjectName>習題</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,9 +125,9 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -158,9 +143,9 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
