--- a/CPlus/Class定義與宣告/Class定義與宣告.vcxproj.filters
+++ b/CPlus/Class定義與宣告/Class定義與宣告.vcxproj.filters
@@ -15,28 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="fill 與 fill_n.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="accumulate.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="copy.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="sort.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="Insert Iterator.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="iostream iterator.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="reverse_iterator.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="replace.cpp">
+    <ClCompile Include="Source.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
