--- a/CPlus/Class定義與宣告/Class定義與宣告.vcxproj
+++ b/CPlus/Class定義與宣告/Class定義與宣告.vcxproj
@@ -111,7 +111,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="class標籤.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
