--- a/CPlus/Class定義與宣告/Class定義與宣告.vcxproj.filters
+++ b/CPlus/Class定義與宣告/Class定義與宣告.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="class標籤.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
